--- a/norst.co.zw/css/style.css
+++ b/norst.co.zw/css/style.css
@@ -1,5 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
+}
 body {
     background-color: #f2f2f2;
+    font-family: inherit
   }
   
   .center {
